# PR_test

./: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  client.cpp  server.cpp  user_storage_scratch.sql
client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatClientApp.cpp  ChatClientApp.h  ChatClientImpl.h  ChatModel.cpp  ChatModel.h  ClientFileManager.cpp  ClientFileManager.h  IChatClient.h  IFileStorage.h  client.cpp  qml.qrc
client/qml/: ChatScreen.qml  ConnectScreen.qml  main.qml  qmldir
core/: AppEvent.cpp  AppEvent.h  CMakeLists.txt  ChatAppModel.cpp  ChatAppModel.h  ChatEvent.cpp  ChatEvent.h  ChatFilePacket.cpp  ChatFilePacket.h  ChatPacket.cpp  ChatPacket.h  ChatRoomModel.cpp  ChatRoomModel.h  ChatUserModel.cpp  ChatUserModel.h  CoreUtility.cpp  CoreUtility.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h  PacketEventTransform.cpp  PacketEventTransform.h  Room.cpp  Room.h  User.cpp  User.h  fileManagerTests.cpp
server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ServerFileManager.cpp  ServerFileManager.h  server.cpp
tests/: CMakeLists.txt  ChatModelTest.h  ClientFileManagerTest.h  CoreTest.h  FileManagerTest.h  QObjectTestHelper.h  TestClient.h  client_tests.cpp  core_tests.cpp  main.cpp
